Side scrollbars fixed

--- a/src/styles/components/_acccent-bar.scss
+++ b/src/styles/components/_acccent-bar.scss
@@ -3,7 +3,9 @@
 .accent-bar {
    background-repeat: no-repeat;
    @include p-el(before, $width: 5px, $height: 35%) {
-      left: 0;
+      @include position(absolute, $z-index: 2) {
+         left: 0;
+      }
       background-image: linear-gradient(
          to top,
          hsl(var(--clr-accent-orange)),
@@ -26,8 +28,10 @@
 
    @include m(horizontal) {
       @include p-el(before, $width: 100%, $height: 5px) {
-         bottom: 0;
-         left: 0;
+         @include position(absolute, $z-index: 2) {
+            bottom: 0;
+            left: 0;
+         }
          opacity: 0;
          background-image: linear-gradient(
             to right,
