--- a/src/styles/components/_story.scss
+++ b/src/styles/components/_story.scss
@@ -6,11 +6,13 @@
       opacity: 1;
    }
 
-   @include p-el(after) {
-      @include position(absolute) {
-         inset: 0;
-
-         background-color: hsl(var(--clr-pure-black) / 0.3);
+   @include m(shadow) {
+      @include p-el(after) {
+         @include position(absolute) {
+            inset: 0;
+            background-color: hsl(var(--clr-pure-black) / 0.3);
+            pointer-events: none;
+         }
       }
    }
 
@@ -26,7 +28,7 @@
    }
 
    @include e(title) {
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.4rem;
    }
 
    @include e(subtitle) {
